# minecraft-server

./: Cargo.toml  README.md
src/: main.rs
src/client_handler/: login.rs  mod.rs  status.rs
src/protocol/: codec.rs  error.rs  mod.rs
src/protocol/data_types/: array.rs  chat.rs  mod.rs  optional.rs  position.rs  primitives.rs  string.rs  varint.rs  varints.rs
src/protocol/packets/: macros.rs  mod.rs  packet.rs
src/protocol/packets/handshaking/: handshake.rs  mod.rs
src/protocol/packets/login/: disconnect.rs  mod.rs  start.rs  success.rs
src/protocol/packets/status/: mod.rs  ping.rs  status.rs
